# Cmake-test

source/: .gitignore  CMakeLists.txt  info.txt  main.cpp
source/include/: dog.h
source/oper/include/: oper.h
source/oper/src/: oper.cpp
source/src/: dog.cpp
